added JPA class
Signed-off-by: Anh-Kagi <anh.kagi@protonmail.com>

--- a/NaturalTheScattering/src/main/resources/application.properties
+++ b/NaturalTheScattering/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-spring.h2.console.enabled=true
+spring.jpa.open-in-view=false
 # values none, update, create, create-drop
 spring.jpa.hibernate.ddl-auto=create-drop
 # jdbc:h2:mem:nts | jdbc:h2:file:./nts
