--- a/NaturalTheScattering/src/main/resources/application.properties
+++ b/NaturalTheScattering/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.url=jdbc:h2:mem:nts
 spring.datasource.username=nts
 spring.datasource.password=nts
 spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-ui
 #spring.h2.console.settings.trace=true
