bug fix & refactoring
refactored to full english
added test scripts (unit test don't work as intended)

Signed-off-by: Anh-Kagi <anh.kagi@protonmail.com>

--- a/NaturalTheScattering/src/test/resources/application.properties
+++ b/NaturalTheScattering/src/test/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.url=jdbc:h2:mem:nts_test
 spring.datasource.username=nts_test
 spring.datasource.password=nts_test
 spring.datasource.driver-class-name=org.h2.Driver
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 #spring.h2.console.enabled=false
 #spring.h2.console.path=/h2-ui
 #spring.h2.console.settings.trace=true
