--- a/NaturalTheScattering/src/main/resources/application.properties
+++ b/NaturalTheScattering/src/main/resources/application.properties
@@ -1,14 +1,11 @@
-server.port=8080
+server.port=${APP_PORT}
 spring.jpa.open-in-view=false
 # values none, update, create, create-drop
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 # jdbc:h2:mem:nts | jdbc:h2:file:./nts
-spring.datasource.url=jdbc:h2:mem:nts
-spring.datasource.username=nts
-spring.datasource.password=nts
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:mariadb://${DB_HOST}:3306/${DB_DTBS}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 #spring.jpa.show-sql=true
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-ui
-#spring.h2.console.settings.trace=true
-#spring.h2.console.settings.web-allow-others=true
+# true | false
