--- a/NaturalTheScattering/src/test/resources/application.properties
+++ b/NaturalTheScattering/src/test/resources/application.properties
@@ -3,9 +3,9 @@ spring.jpa.open-in-view=false
 # values none, update, create, create-drop
 spring.jpa.hibernate.ddl-auto=create-drop
 # jdbc:h2:mem:nts | jdbc:h2:file:./nts
-spring.datasource.url=jdbc:h2:mem:nts_test
-spring.datasource.username=nts_test
-spring.datasource.password=nts_test
+spring.datasource.url=jdbc:h2:mem:nts
+spring.datasource.username=nts
+spring.datasource.password=nts
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.show-sql=true
 #spring.h2.console.enabled=false
