moved NaturalTheScattering/ to naturalthescattering/
Signed-off-by: Anh-Kagi <anh.kagi@protonmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ version: "3"
 services:
     app:
         build:
-            context: ./NaturalTheScattering
+            context: ./naturalthescattering
         restart: unless-stopped
         ports:
-            - 8080:8080
+            - 8080:${APP_PORT}
         environment:
             APP_PORT: ${APP_PORT}
             DB_HOST: ${DB_HOST}
